# rss-monitor

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  logger.rs  main.rs
src/features/: mod.rs
src/features/parser/: mod.rs
src/features/reporter/: mod.rs
src/feed/: mod.rs
src/rss_watcher/: mod.rs
src/sink/: mod.rs
